* Fix fuse.Template's cache and maintain compatibility with Prototype's Template class. [jddalton]

* Fix fuse.Fusebox'ed String#match and RegExp#exec to allow returning arrays containing undefined values. [jddalton]

* Fix Opera 9.25 bug with fuse.String#lastIndexOf and add new feature test `STRING_LAST_INDEX_OF_BUGGY_WITH_NEGATIVE_OR_NAN_POSITION`. [jddalton]

* Rewrite fuse.Template to parse the template once instead of each time parse() is called, rename evaluate() to parse(), and add support for replacing duplicate tokens. [jddalton, Mathias Baert, Yaffle]
  Note: Backwards compatibility warning.

* Pass event object to EventObserver callbacks. [Prototype LH #150] [jddalton, Morus Walter]

* Confirm fuse.String#match and fuse.RegExp#exec don't return sparse arrays in Opera 9.25 or Safari 3.x. [Prototype LH #946] [jay, jddalton]

* Avoid setting style overflow via cssText in setStyle() because it causes bugs in IE and Konqueror. [jddalton, kangax]

* Support fallback for Safari 2.x event.isMiddleClick() support. [Prototype LH #731] [Arthur Schreiber, Frank, jddalton]

* Make setOpacity() method treat a value of 1 and an empty string differently. [Prototype LH #684] [david brillard, jddalton] 

* Make setStyle() method avoid throwing errors when passing falsy values. [Prototype LH #558] [garrett, jddalton]

* Make setStyle() method support hyphenated style properties. [Prototype LH #970] [jddalton, zeno]

* Fix fuse.Fusebox wrappers for Number methods toExponential(), toFixed(), and toPrecision(). [jddalton]

* Add `fractionDigits` argument to fuse.Number#round. [Prototype LH #830] [jddalton, Radoslav Stankov]

* Ensure fuse.Fusebox Native methods that return arrays set index values in accending order so de facto order is preserved in for-in loops. [jddalton]

* Rename the fuse.dom.Data object to fuse.dom.data. [jddalton]

* Avoid calling decorator instance method focus() in Form focusFirstControl(). [Diego Perini, jddalton]
